finalizing recommendation system