@@ -1,6 +1,7 @@
 package com.Graduation.InstaCv.service;
 
-import com.Graduation.InstaCv.data.dto.RemoteOkJobDto;
+import com.Graduation.InstaCv.data.dto.RemoteOkJobResponse;
+import com.Graduation.InstaCv.gateways.externalJobs.RemoteOkApiClient;
 import lombok.RequiredArgsConstructor;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
@@ -8,101 +9,38 @@ import org.jsoup.nodes.Element;
 import org.jsoup.nodes.TextNode;
 import org.jsoup.safety.Safelist;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpMethod;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
-import org.springframework.web.client.RestTemplate;
 
-import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
+import java.time.OffsetDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static com.Graduation.InstaCv.utils.DeveloperTags.DEV_TAGS;
 
 @Service
 @RequiredArgsConstructor
 public class RemoteOKJobScrappingService {
-
-    private final RestTemplate restTemplate;
-    @Value("${remoteok.api.url}")
+    @Value("${external.jobs.api.remoteok}")
     private String REMOTE_OK_API_URL;
+    private final RemoteOkApiClient remoteOkApiClient;
 
-    // Helper method to check if a job is a developer job
-    private boolean isDeveloperJob(RemoteOkJobDto job) {
-        if (job.getTags() == null) return false;
-
-        for (String tag : job.getTags()) {
-            String lowerTag = tag.toLowerCase();
-            if (DEV_TAGS.stream().anyMatch(lowerTag::contains)) {
-                return true;
-            }
-        }
-
-        return false;
+    public List<RemoteOkJobResponse> getItJobs(int lastDaysCount) {
+        return getAllJobs().stream().filter(job -> isPostedWithinDaysCount(job, lastDaysCount)).toList();
     }
 
-    // Helper method to check if a job was posted within the last two weeks
-    private boolean isPostedWithinDaysCount(RemoteOkJobDto job, int lastDaysCount) {
-        if (job.getDate() == null || job.getDate().isEmpty()) return false;
-
+    private List<RemoteOkJobResponse> getAllJobs() {
         try {
-            // Parse ISO 8601 date string
-            LocalDateTime jobDate = LocalDateTime.parse(
-                    job.getDate().replace("Z", "").replace("+00:00", ""),
-                    DateTimeFormatter.ISO_DATE_TIME);
-
-            // Get date from two weeks ago
-            LocalDateTime twoWeeksAgo = LocalDateTime.now().minusDays(lastDaysCount);
-
-            // Return true if job date is after two weeks ago
-            return jobDate.isAfter(twoWeeksAgo);
-        } catch (Exception e) {
-            System.err.println("Error parsing date: " + job.getDate() + " - " + e.getMessage());
-            return false; // If we can't parse the date, we exclude it from recent jobs
-        }
-    }
-
-    public List<RemoteOkJobDto> getDevJobs() {
-        try {
-            HttpHeaders headers = new HttpHeaders();
-            headers.set("User-Agent", "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36");
-
-            HttpEntity<String> entity = new HttpEntity<>(headers);
-
-            ResponseEntity<RemoteOkJobDto[]> response = restTemplate.exchange(
-                    REMOTE_OK_API_URL,
-                    HttpMethod.GET,
-                    entity,
-                    RemoteOkJobDto[].class
-            );
-
-            RemoteOkJobDto[] jobs = response.getBody();
-
-            if (jobs.length == 0) {
-                return Collections.emptyList();
-            }
-
-            // Skip the first element (it's metadata), filter for dev jobs
-            return processJobDescriptions(Arrays.stream(jobs)
-                    .skip(1)
+            List<RemoteOkJobResponse> jobs = remoteOkApiClient.getRemoteOkJobs();
+            if (jobs.isEmpty()) return Collections.emptyList();
+            return jobs.stream().skip(1)
                     .filter(this::isDeveloperJob)
-                    .collect(Collectors.toList()));
+                    .peek(job -> {
+                        job.setHtmlDescription(job.getDescription());
+                        job.setDescription(cleanJobDescription(job.getDescription()));
+                    }).toList();
         } catch (Exception e) {
-            // Log the exception
             System.err.println("Error fetching dev jobs: " + e.getMessage());
             return Collections.emptyList();
         }
-    }
-
-    public List<RemoteOkJobDto> getFilteredDevJobs(Integer lastDaysCount) {
-        List<RemoteOkJobDto> baseJobList = getDevJobs();
-        if (lastDaysCount != null && lastDaysCount > 0) {
-            baseJobList = baseJobList.stream().filter(job -> isPostedWithinDaysCount(job, lastDaysCount)).toList();
-        }
-        return baseJobList;
     }
 
     private String cleanJobDescription(String htmlDescription) {
@@ -127,17 +65,19 @@ public class RemoteOKJobScrappingService {
                     .replaceAll("\\n{3,}", "\n\n");
         } catch (Exception e) {
             System.err.println("Error cleaning job description: " + e.getMessage());
-            // Return the original if parsing fails
             return htmlDescription;
         }
     }
 
-    private List<RemoteOkJobDto> processJobDescriptions(List<RemoteOkJobDto> jobs) {
-        jobs.forEach(job -> {
-            if (job.getDescription() != null) {
-                job.setDescription(cleanJobDescription(job.getDescription()));
-            }
-        });
-        return jobs;
+    private boolean isDeveloperJob(RemoteOkJobResponse job) {
+        if (job.getTags() == null) return false;
+        return job.getTags().stream().anyMatch(tag -> DEV_TAGS.contains(tag.toLowerCase()));
+    }
+
+    private boolean isPostedWithinDaysCount(RemoteOkJobResponse job, int lastDaysCount) {
+        OffsetDateTime jobDate = job.getDate();
+        if (jobDate == null) return false;
+        OffsetDateTime thresholdDate = OffsetDateTime.now().minusDays(lastDaysCount);
+        return jobDate.isAfter(thresholdDate);
     }
 }
